added plane controller added datadables to plane and airport overviews

--- a/src/main/resources/static/views/airport-overview.html
+++ b/src/main/resources/static/views/airport-overview.html
@@ -1,3 +1,15 @@
 <div class="container">
-    airport overview
+    <h1>Airport overview</h1>
+
+    <table id="airport-table">
+        <thead>
+        <tr>
+            <th>Location</th>
+            <th>Planes</th>
+        </tr>
+        </thead>
+        <tbody></tbody>
+    </table>
 </div>
+
+<script type="text/javascript" src="js/airport_table.js"></script>
