--- a/src/main/resources/static/views/plane-overview.html
+++ b/src/main/resources/static/views/plane-overview.html
@@ -1,3 +1,16 @@
 <div class="container">
-    plane overview
+    <h1>Plane overview</h1>
+
+    <table id="plane-table">
+        <thead>
+        <tr>
+            <th>Serial Number</th>
+            <th>Max fuel</th>
+            <th>Current fuel</th>
+        </tr>
+        </thead>
+        <tbody></tbody>
+    </table>
 </div>
+
+<script type="text/javascript" src="js/plane_table.js"></script>
