airport can be added with mulitple planes

--- a/src/main/resources/static/views/airport-add.html
+++ b/src/main/resources/static/views/airport-add.html
@@ -1,11 +1,16 @@
+
+
+<div class="container">
 <row>
     <h1>Fill in the airport details here.</h1>
 </row>
+<script type="text/javascript" src="js/airport_crud.js"></script>
+<script type="text/javascript" src="js/airport_addform.js"></script>
 <script>
     getPlaneDropdown();
 </script>
 <br>
-<form class="formcenter" data-toggle="validator" role="form" id="guestForm">
+<form class="formcenter" data-toggle="validator" role="form" id="airport-form">
 
     <div class="row form-group">
         <div class="col-25">
@@ -27,6 +32,4 @@
         <input type="submit" id="submitButton" value="Submit">
     </div>
 </form>
-
-<script type="text/javascript" src="js/airport_crud.js"></script>
-<script type="text/javascript" src="js/airport_addform.js"></script>
+</div>
