--- a/src/main/resources/static/views/airport-overview.html
+++ b/src/main/resources/static/views/airport-overview.html
@@ -1,9 +1,9 @@
 <div class="container">
-    <h1>Airport overview</h1>
-    <button type="button" class="btn btn-primary" onclick="addAirport()">
+    <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#airport-modal">
         + add Airport
     </button>
 
+    <h1>Airport overview</h1>
     <table id="airport-table">
         <thead>
         <tr>
