--- a/src/main/resources/static/views/plane-add.html
+++ b/src/main/resources/static/views/plane-add.html
@@ -1,3 +1,6 @@
+
+
+<div class="container">
 <row>
     <h1>Fill in the plane details here.</h1>
 </row>
@@ -24,6 +27,6 @@
         <input type="submit" id="submitButton" value="Submit">
     </div>
 </form>
-
+</div>
 <script type="text/javascript" src="js/plane_crud.js"></script>
 <script type="text/javascript" src="js/plane_addform.js"></script>
