added more info to the models update tests update plane add form

--- a/src/main/resources/static/views/plane-add.html
+++ b/src/main/resources/static/views/plane-add.html
@@ -17,10 +17,26 @@
     </div>
     <div class="row form-group">
         <div class="col-25">
+            <label for="type-input">Type</label>
+        </div>
+        <div class="col-75">
+            <input type="text" class="form-control" id="type-input" placeholder="Enter type" required>
+        </div>
+    </div>
+    <div class="row form-group">
+        <div class="col-25">
             <label for="maxfuel-input">Maximum fuel</label>
         </div>
         <div class="col-75">
             <input type="text" class="form-control" id="maxfuel-input" placeholder="Enter maximum fuel" required>
+        </div>
+    </div>
+    <div class="row form-group">
+        <div class="col-25">
+            <label for="consumption-input">Consumption rate</label>
+        </div>
+        <div class="col-75">
+            <input type="text" class="form-control" id="consumption-input" placeholder="Enter consumption rate" required>
         </div>
     </div>
     <div class="row">
