updated add form and datatable of airport

--- a/src/main/resources/static/views/airport-overview.html
+++ b/src/main/resources/static/views/airport-overview.html
@@ -7,7 +7,8 @@
     <table id="airport-table">
         <thead>
         <tr>
-            <th>Location</th>
+            <th>City</th>
+            <th>Name</th>
             <th>Planes</th>
         </tr>
         </thead>
