--- a/src/main/resources/static/views/airport-add.html
+++ b/src/main/resources/static/views/airport-add.html
@@ -14,10 +14,18 @@
 
     <div class="row form-group">
         <div class="col-25">
-            <label for="location-input">Location</label>
+            <label for="location-input">City</label>
         </div>
         <div class="col-75">
-            <input type="text" class="form-control" id="location-input" placeholder="Enter location name" required>
+            <input type="text" class="form-control" id="location-input" placeholder="Enter city name" required>
+        </div>
+    </div>
+    <div class="row form-group">
+        <div class="col-25">
+            <label for="name-input">Name</label>
+        </div>
+        <div class="col-75">
+            <input type="text" class="form-control" id="name-input" placeholder="Enter airport name" required>
         </div>
     </div>
     <div class="row form-group">
