added more info to plane overview table added fly button changed containers of overview pages

--- a/src/main/resources/static/views/dashboard.html
+++ b/src/main/resources/static/views/dashboard.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container-fluid">
     <div class="jumbotron">
         <h1>Welkom bij XYZ Airlines!</h1>
     </div>
