--- a/src/main/resources/static/views/plane-overview.html
+++ b/src/main/resources/static/views/plane-overview.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container-fluid">
     <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#plane-modal">
     + add Plane
     </button>
@@ -9,8 +9,11 @@
         <thead>
         <tr>
             <th>Serial Number</th>
+            <th>Type</th>
             <th>Max fuel</th>
             <th>Current fuel</th>
+            <th>Consumption rate</th>
+            <th></th>
             <th></th>
         </tr>
         </thead>
