--- a/src/main/resources/static/views/airport-overview.html
+++ b/src/main/resources/static/views/airport-overview.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container-fluid">
     <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#airport-modal">
         + add Airport
     </button>
