fly button sends a api call and triggers a modal

--- a/src/main/resources/static/views/plane-overview.html
+++ b/src/main/resources/static/views/plane-overview.html
@@ -37,3 +37,15 @@
         </div>
     </div>
 </div>
+
+<div class="modal fade" id="fly-modal">
+    <div class="modal-dialog">
+        <div class="modal-content" id="fly-modal-container">
+            <script>
+                $(document).ready(function(){
+                    loadModal("views/plane-fly.html", "#fly-modal-container");
+                });
+            </script>
+        </div>
+    </div>
+</div>
