--- a/src/main/resources/static/css/main.css
+++ b/src/main/resources/static/css/main.css
@@ -3,6 +3,11 @@
     box-sizing: border-box;
 }
 
+#fly-error-message{
+    color: red;
+    padding: 5px;
+}
+
 
 input[type=text], select, textarea{
     width: 100%;
