airports can be deleted in frontend

--- a/src/main/resources/static/views/airport-overview.html
+++ b/src/main/resources/static/views/airport-overview.html
@@ -1,5 +1,5 @@
 <div class="container-fluid">
-    <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#airport-modal">
+    <button type="button" class="btn btn-primary" onclick="getPlaneDropdown();" data-toggle="modal" data-target="#airport-modal">
         + add Airport
     </button>
 
@@ -10,6 +10,7 @@
             <th>City</th>
             <th>Name</th>
             <th>Planes</th>
+            <th></th>
         </tr>
         </thead>
         <tbody></tbody>
